# persistent-memory-recommend-system

./: README.md  pyproject.toml
src/persistent_memory_recsys/: __init__.py  main.py
src/persistent_memory_recsys/bootstrap/: container.py
src/persistent_memory_recsys/catalog/: module.py
src/persistent_memory_recsys/catalog/application/: ports.py  use_cases.py
src/persistent_memory_recsys/catalog/domain/: __init__.py  models.py
src/persistent_memory_recsys/constraint/: __init__.py  module.py
src/persistent_memory_recsys/constraint/adapters/: __init__.py
src/persistent_memory_recsys/constraint/application/: __init__.py  ports.py  use_cases.py
src/persistent_memory_recsys/constraint/domain/: __init__.py  models.py
src/persistent_memory_recsys/interaction/: __init__.py  module.py
src/persistent_memory_recsys/interaction/adapters/: __init__.py
src/persistent_memory_recsys/interaction/application/: __init__.py  ports.py
src/persistent_memory_recsys/interaction/domain/: __init__.py  models.py
src/persistent_memory_recsys/memory/: module.py
src/persistent_memory_recsys/memory/adapters/: __init__.py
src/persistent_memory_recsys/memory/application/: ports.py
src/persistent_memory_recsys/memory/domain/: __init__.py  models.py
src/persistent_memory_recsys/preference/: __init__.py  module.py
src/persistent_memory_recsys/preference/adapters/: __init__.py
src/persistent_memory_recsys/recommendation/: __init__.py  module.py
src/persistent_memory_recsys/shared/: __init__.py
tests/: test_constraint_static_runtime.py  test_system_http.py
(+30 files in other folders)
